WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274937
REGRESSION(
273633@main
): Text is displayed outside of the view in DHL app
https://bugs.webkit.org/show_bug.cgi?id=274937
Summary
REGRESSION(273633@main): Text is displayed outside of the view in DHL app
alan
Reported
2024-05-30 17:28:32 PDT
<
rdar://128348427
>
Attachments
[fast-cq]Patch
(10.86 KB, patch)
2024-05-30 17:38 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-05-30 17:38:50 PDT
Created
attachment 471549
[details]
[fast-cq]Patch
EWS
Comment 2
2024-05-31 05:44:06 PDT
Committed
279572@main
(c05a8c24b9c1): <
https://commits.webkit.org/279572@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 471549
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug